--- a/sunshinewatch/src/main/res/values/strings.xml
+++ b/sunshinewatch/src/main/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="digital_pm">PM</string>
     <string name="watchface_name">Sunshine</string>
     <string name="my_digital_name">Sunshine</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Sunshine Weather</string>
+    <string name="title_activity_digital_watch_face_config">DigitalWatchFaceConfigActivity</string>
+    <string name="twentyfour">Military Time</string>
 </resources>
