--- a/sunshinewatch/src/main/res/values/strings.xml
+++ b/sunshinewatch/src/main/res/values/strings.xml
@@ -12,25 +12,45 @@
     <string name="title_activity_digital_watch_face_config">DigitalWatchFaceConfigActivity</string>
     <string name="twentyfour">Military Time</string>
 
-    <string name="color_primary">primary</string>
-    <string name="color_primary2">#03a9f4</string>
+    <string name="color_primary">Primary</string>
+    <string name="color_light_blue">#03a9f4</string>
+    <string name="aqua">Aqua</string>
+    <string name="color_aqua">#00ffff</string>
+    <string name="purple">Purple</string>
+    <string name="color_purple">#753192</string>
+    <string name="pink">Pink</string>
+    <string name="color_pink">#FF1493</string>
+    <string name="orange">Orange</string>
+    <string name="color_orange">#FF8C00</string>
+
+
+
+
+
+
+
     <string name="color_black">Black</string>
     <string name="color_blue">Blue</string>
     <string name="color_gray">Gray</string>
     <string name="color_green">Green</string>
     <string name="color_navy">Navy</string>
     <string name="color_red">Red</string>
-    <string name="color_white">White</string>
 
     <string-array name="color_array">
-        <item>@string/color_primary2</item>
+        <item>@string/color_light_blue</item>
         <item>@string/color_black</item>
         <item>@string/color_blue</item>
+        <item>@string/color_aqua</item>
+        <item>@string/color_purple</item>
+        <item>@string/color_pink</item>
         <item>@string/color_gray</item>
         <item>@string/color_green</item>
         <item>@string/color_navy</item>
         <item>@string/color_red</item>
-        <item>@string/color_white</item>
+        <item>@string/color_orange</item>
+
+
+
     </string-array>
 
 
